--- a/src/app/components/Timeline/TimelineItem.module.scss
+++ b/src/app/components/Timeline/TimelineItem.module.scss
@@ -1,11 +1,38 @@
+@import '@/styles/themes';
+
 .item {
-  width: 300px;
-  padding: 1rem;
-  background: white;
+  flex: 0 0 250px;
+  min-width: 250px;
+  max-height: 200px;
+  overflow: hidden;
+  background: var(--color-card-bg);
   border-radius: 12px;
+  padding: 0.75rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  cursor: pointer;
+
   h4 {
-    color: #5f6df6;
+    color: var(--color-primary);
     margin-bottom: 0.5rem;
+    font-size: 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+  }
+
+  p {
+    font-size: 0.9rem;
+    line-height: 1.2;
+    max-height: 3.6em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 }
