--- a/src/app/components/YearCircle/YearCircle.module.scss
+++ b/src/app/components/YearCircle/YearCircle.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/themes';
+
 .wrapper {
   position: absolute;
   top: 50%;
@@ -13,6 +15,7 @@
   width: 100%;
   height: 100%;
   transform-origin: center;
+  --rotation: 0deg;
 }
 
 .dot {
@@ -21,26 +24,31 @@
   left: 50%;
   width: 14px;
   height: 14px;
-  background-color: #ccc;
+  background-color: var(--color-border);
   border-radius: 50%;
-  transform-origin: center center;
+  transform-origin: center;
   transform: translate(-50%, -50%) rotate(var(--r)) translateX(var(--radius));
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dotInner {
   opacity: 0;
-  transform-origin: center center;
+  transform-origin: center;
   text-align: center;
 }
 
 .dotLabel {
-  color: #fff;
+  color: var(--color-card-bg);
   font-size: 0.8rem;
   font-weight: bold;
   pointer-events: none;
+  line-height: 1;
 }
 
 .backgroundLines {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -52,7 +60,7 @@
   &::after {
     content: '';
     position: absolute;
-    background-color: #ddd;
+    background-color: var(--color-border);
     z-index: 0;
   }
 
@@ -78,7 +86,7 @@
     left: 50%;
     width: 400px;
     height: 400px;
-    border: 1px solid #ddd;
+    border: 1px solid var(--color-border);
     border-radius: 50%;
     transform: translate(-50%, -50%);
     z-index: 0;
