--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,3 +4,8 @@ $color-border-neutral: #ccc;
 $color-white: #fff;
 $color-hover-bg: #f0f0f0;
 $color-black: #000;
+
+
+$mobile: 768px;
+$tablet: 1024px;
+$desktop: 1200px;
