--- a/src/app/components/ToggleTheme/ToggleTheme.module.scss
+++ b/src/app/components/ToggleTheme/ToggleTheme.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/themes';
+@import '@/styles/vars';
 
 .switch {
   position: relative;
@@ -6,6 +7,11 @@
   width: 60px;
   height: 30px;
   cursor: pointer;
+  
+  @media (max-width: $mobile) {
+    width: 50px;
+    height: 25px;
+  }
 }
 
 .switch input {
@@ -32,10 +38,19 @@
   background-color: var(--color-card-bg);
   border-radius: 50%;
   transition: transform 0.3s ease;
+  
+  @media (max-width: $mobile) {
+    height: 19px;
+    width: 19px;
+  }
 }
 
 input:checked + .slider::before {
   transform: translateX(30px);
+  
+  @media (max-width: $mobile) {
+    transform: translateX(25px);
+  }
 }
 
 .icon {
@@ -45,4 +60,8 @@ input:checked + .slider::before {
   font-size: 0.85rem;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  
+  @media (max-width: $mobile) {
+    font-size: 0.75rem;
+  }
 }
