--- a/src/app/pages/HistoryPage.module.scss
+++ b/src/app/pages/HistoryPage.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/themes';
+@import '@/styles/vars';
 
 .container {
   position: relative;
@@ -7,10 +8,17 @@
   flex-direction: column;
   border: 1px solid var(--color-border);
 }
+
 .themeToggleWrapper {
   position: absolute;
   top: 16px;
   right: 16px;
   z-index: 100;
   padding: 32px 0;
+  
+  @media (max-width: $mobile) {
+    top: 8px;
+    right: 8px;
+    padding: 16px 0;
+  }
 }
